Add basic container
Resolves: None

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <script src="script.js"></script>
+        <script src="js/script.js" defer></script>
         <title>Our Assignment Website</title>
     </head>
     <body>
-        
+        <div class="bossEntity" id="bossEntity">
+            <img src="" alt="">
+        </div>
+        <div class="typingContainer">
+            <div class="wordContainer" id="wordContainer">
+                <div class="wordSelection 1"></div>
+                <div class="wordSelection 2"></div>
+                <div class="wordSelection 3"></div>
+            </div>
+        </div>
     </body>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </html>
