--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
-                <div class="wordSelection 1"></div>
-                <div class="wordSelection 2"></div>
-                <div class="wordSelection 3"></div>
+                <div class="wordSelection-1"><p>placeholder1</p></div>
+                <div class="wordSelection-2"><p>placeholder2</p></div>
+                <div class="wordSelection-3"><p>placeholder3</p></div>
             </div>
         </div>
     </body>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </html>
