Clean script.js Add lottie library
Resolves: None

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,26 @@
         <script src="js/script.js" defer></script>
         <title>Our Assignment Website</title>
     </head>
+
     <body>
         <div class="bossEntity" id="bossEntity">
-            <img src="" alt="">
+            <!-- Lottie Player -->
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
-                <div class="wordSelection-1"><p>placeholder1</p></div>
-                <div class="wordSelection-2"><p>placeholder2</p></div>
-                <div class="wordSelection-3"><p>placeholder3</p></div>
+                <div class="wordSelection-1">
+                    <p>placeholder1</p>
+                </div>
+                <div class="wordSelection-2">
+                    <p>placeholder2</p>
+                </div>
+                <div class="wordSelection-3">
+                    <p>placeholder3</p>
+                </div>
             </div>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </html>
