--- a/game.html
+++ b/game.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
+        <link rel="stylesheet" href="css/gameStyle.css">
         <title>Our Assignment Website</title>
     </head>
 
@@ -16,18 +15,21 @@
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
-                <div class="wordSelection-1">
+                <div class="wordSelection-0">
                     <p>placeholder1</p>
                 </div>
-                <div class="wordSelection-2">
+                <div class="wordSelection-1">
                     <p>placeholder2</p>
                 </div>
-                <div class="wordSelection-3">
+                <div class="wordSelection-2">
                     <p>placeholder3</p>
                 </div>
             </div>
         </div>
     </body>
+
+    <script src="js/playerAttackFunctionality.js"></script>
+    <script src="js/bossBehaviour.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
