Fix index.html Add main menu elements Style main menu Add main menu assets
Resolves: None

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     </head>
 
     <body>
-
+        <div class="title">
+            <img src="Assets/images/pngs/Title.png" alt="" class="title-image" draggable="false">
+        </div>
+        <ul class="options">
+            <li id="Start" class="raise-on-hover">Start Game</li>
+            <li id="Difficulty" class="raise-on-hover">Easy</li>
+            <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
+            <li id="Help" class="raise-on-hover">Help</li>
+        </ul>
     </body>
 
     <script src="js/menu.js"></script>
