Add cycle through difficulty functionality to main menu Update playerAttackFunctionality to retrieve difficulty from local storage Update css to display custom cursor in html Update HTML names Relocate js files
Resolves: None

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/gameStyle.css">
-        <title>Our Assignment Website</title>
+        <title>Syncope</title>
     </head>
 
     <body>
@@ -28,9 +28,8 @@
         </div>
     </body>
 
-    <script src="js/playerAttackFunctionality.js"></script>
-    <script src="js/bossBehaviour.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
+    <script src="js/playerAttackFunctionality.js"></script>
+    <script src="js/bossBehaviour.js"></script>
 </html>
