--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/menuStyle.css">
-        <title>Document</title>
+        <title>Syncope</title>
     </head>
 
     <body>
@@ -19,9 +19,9 @@
             <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
             <li id="Help" class="raise-on-hover">Help</li>
         </ul>
+        
     </body>
-
-    <script src="js/menu.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="js/menu.js"></script>
 </html>
