Add disableZoom.js to disable keyboard input zooming Add help menu Add help menu styling
Resolve: None

--- a/game.html
+++ b/game.html
@@ -32,4 +32,5 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="js/playerAttackFunctionality.js"></script>
     <script src="js/bossBehaviour.js"></script>
+    <script src="js/disableZoom.js"></script>
 </html>
