--- a/index.html
+++ b/index.html
@@ -19,9 +19,20 @@
             <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
             <li id="Help" class="raise-on-hover">Help</li>
         </ul>
-        
+        <div class="help-container">
+            <div class="prev">
+
+            </div>
+            <div class="help-body">
+
+            </div>
+            <div class="next">
+
+            </div>
+        </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/disableZoom.js"></script>
 </html>
