--- a/game.html
+++ b/game.html
@@ -5,7 +5,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
         <link rel="stylesheet" href="css/gameStyle.css">
+        <script src="js/playerAttackFunctionality.js" defer></script>
+        <script src="js/bossBehaviour.js" defer></script>
+        <script src="js/disableZoom.js" defer></script>
         <title>Syncope</title>
     </head>
 
@@ -30,7 +34,4 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="js/playerAttackFunctionality.js"></script>
-    <script src="js/bossBehaviour.js"></script>
-    <script src="js/disableZoom.js"></script>
 </html>
