--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
         <link rel="stylesheet" href="css/menuStyle.css">
+        <script src="js/menu.js" defer></script>
+        <script src="js/disableZoom.js" defer></script>
         <title>Syncope</title>
     </head>
 
@@ -21,18 +24,13 @@
         </ul>
         <div class="help-container">
             <div class="prev">
-
             </div>
             <div class="help-body">
-
             </div>
             <div class="next">
-                
             </div>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/disableZoom.js"></script>
 </html>
