Add Time and Input
<p id="time"> displays countdown time
<input id="textInput"> to get user input

--- a/game.html
+++ b/game.html
@@ -17,6 +17,10 @@
         <div class="bossEntity" id="bossEntity">
             <!-- Lottie Player -->
         </div>
+        <div class="info">
+            <!-- Contains Info such as; time left & Progress -->
+            <p id="time">time</p>
+        </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
                 <div class="wordSelection-1">
@@ -28,6 +32,9 @@
                 <div class="wordSelection-3">
                     <p>placeholder3</p>
                 </div>
+            </div>
+            <div class="typingBox">
+                <input id="textInput" placeholder = "Type here!"></input>
             </div>
         </div>
     </body>
