--- a/game.html
+++ b/game.html
@@ -20,6 +20,8 @@
         <div class="info">
             <!-- Contains Info such as; time left & Progress -->
             <p id="time">time</p>
+            <p id="pHealth">Player_Health: </p> <!-- Player Health -->
+            <p id="eHealth">Enemy_Health: </p> <!-- Enemy Health -->
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
