Add Player WPM Display

--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
             <!-- Contains Info such as; time left & Progress -->
             <p id="time">time</p>
             <p id="pHealth">Player_Health: </p> <!-- Player Health -->
+            <p id="pWPM">Player_WPM: </p> <!-- Player WPM -->
             <p id="eHealth">Enemy_Health: </p> <!-- Enemy Health -->
         </div>
         <div class="typingContainer">
