Update game.html Add hoverUserInputText to hover user selected word based on word prediction Update API retrieved words styling in game.html Update README banner
Resolves: None

--- a/game.html
+++ b/game.html
@@ -29,18 +29,14 @@
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
-                <div class="wordSelection-1">
-                    <p>placeholder1</p>
-                </div>
-                <div class="wordSelection-2">
-                    <p>placeholder2</p>
-                </div>
-                <div class="wordSelection-3">
-                    <p>placeholder3</p>
-                </div>
+                <ul>
+                    <li class="wordSelection-1"></li>
+                    <li class="wordSelection-2"></li>
+                    <li class="wordSelection-3"></li>
+                </ul>
             </div>
             <div class="typingBox">
-                <input id="textInput" placeholder = "Type here!"></input>
+                <input id="textInput" placeholder="Type here!" autofocus></input>
             </div>
         </div>
     </body>
