--- a/game.html
+++ b/game.html
@@ -7,8 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
         <link rel="stylesheet" href="css/gameStyle.css">
+        <script src="js/Entities/boss/boss.js"></script>
+        <script src="js/Entities/player/player.js"></script>
         <script src="js/playerFunctionality/attack.js" defer></script>
         <script src="js/playerFunctionality/api.js" defer></script>
+        <script src="js/playerFunctionality/timer.js" defer></script>
         <script src="js/playerFunctionality/DOMInteraction.js" defer></script>
         <script src="js/playerFunctionality/main.js" defer></script>
         <script src="js/bossBehaviour.js" defer></script>
@@ -22,7 +25,7 @@
         </div>
         <div class="info">
             <!-- Contains Info such as; time left & Progress -->
-            <p id="time">time</p>
+            <p id="time">Time</p>
             <p id="pHealth">Player_Health: </p> <!-- Player Health -->
             <p id="pWPM">Player_WPM: </p> <!-- Player WPM -->
             <p id="eHealth">Enemy_Health: </p> <!-- Enemy Health -->
@@ -30,9 +33,6 @@
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
                 <ul>
-                    <li class="wordSelection-1"></li>
-                    <li class="wordSelection-2"></li>
-                    <li class="wordSelection-3"></li>
                 </ul>
             </div>
             <div class="typingBox">
