--- a/game.html
+++ b/game.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
         <link rel="stylesheet" href="css/gameStyle.css">
-        <script src="js/Entities/boss/boss.js"></script>
-        <script src="js/Entities/player/player.js"></script>
+        <script src="js/Entities/enemy/enemy.js" defer></script>
+        <script src="js/Entities/player/player.js" defer></script>
+        <script src="js/LocalStorage/localStorage.js" defer></script>
         <script src="js/playerFunctionality/attack.js" defer></script>
         <script src="js/playerFunctionality/api.js" defer></script>
         <script src="js/playerFunctionality/DOMInteraction.js" defer></script>
