Add leaderboard.js Script

--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
         <script src="js/playerFunctionality/DOMInteraction.js" defer></script>
         <script src="js/playerFunctionality/main.js" defer></script>
         <script src="js/disableZoom.js" defer></script>
+        <script src="js/leaderboard.js" defer></script>
         <title>Syncope</title>
     </head>
 
