Update typing animation
Resolves: None

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
         </div>
         <div class="info">
             <!-- Contains Info such as; time left & Progress -->
-            <p id="time">Time</p>
+            <p id="time">Time: 000s</p>
             <p id="pHealth">Player_Health: </p> <!-- Player Health -->
             <p id="pWPM">Player_WPM: </p> <!-- Player WPM -->
             <p id="eHealth">Enemy_Health: </p> <!-- Enemy Health -->
