--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
             <li id="Start" class="raise-on-hover">Start Game</li>
             <li id="Difficulty" class="raise-on-hover">Easy</li>
             <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
-            <li id="Help" class="raise-on-hover">Help</li>
         </ul>
         <div class="help-container">
             <div class="prev">
             </div>
-            <div class="help-body">
-            </div>
+            <img class="help-body">
             <div class="next">
             </div>
         </div>
+        <div class="game-saveMenu">
+        </div>
+        <div id="Help"class="help-button">?</div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
