--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
         <link rel="stylesheet" href="css/menuStyle.css">
+        <script src="js/SwAl.js" defer></script>
         <script src="js/menu.js" defer></script>
         <script src="js/disableZoom.js" defer></script>
         <title>Syncope</title>
@@ -21,16 +22,10 @@
             <li id="Difficulty" class="raise-on-hover">Easy</li>
             <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
         </ul>
-        <div class="help-container">
-            <div class="prev">
-            </div>
-            <img class="help-body">
-            <div class="next">
-            </div>
-        </div>
         <div class="game-saveMenu">
         </div>
         <div id="Help"class="help-button">?</div>
+        <div id="swal-container"></div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
