--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
-        <link rel="stylesheet" href="css/menuStyle.css">
-        <script src="js/SwAl.js" defer></script>
-        <script src="js/leaderboard.js" defer></script>
-        <script src="js/menu.js" defer></script>
-        <script src="js/disableZoom.js" defer></script>
-        <title>Syncope</title>
-    </head>
-
-    <body>
-        <div class="title">
-            <img src="Assets/images/pngs/Title.png" alt="" class="title-image" draggable="false">
-        </div>
-        <ul class="options">
-            <li id="Start" class="raise-on-hover">Start Game</li>
-            <li id="Difficulty" class="raise-on-hover">Easy</li>
-            <li id="Leaderboard" class="raise-on-hover">Leaderboard</li>
-            <li id="Credits" class="raise-on-hover">Credits</li>
-        </ul>
-        <div class="game-saveMenu"></div>
-        <div id="Help"class="help-button">?</div>
-        <div id="swal-container"></div>
-    </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Assets/images/pngs/SyncopeIconMock.png">
+    <link rel="stylesheet" href="css/menuStyle.css">
+    <script src="js/splash.js" defer></script>
+    <title>Syncope</title>
+</head>
+<body>
+    <div class="splash">
+        <img src="Assets/images/pngs/Title.png" alt="" class="title-image" draggable="false">
+    </div>
+    <div id="EnterMainMenu" class="splash-content">Click anywhere</div>
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </html>
