Add Splashscreen Credits - Added credits to follow wireframe design

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="splash">
         <img src="Assets/images/pngs/Title.png" alt="" class="title-image" draggable="false">
+        <p id="splash-credits">Made by Jimmy Lew & Addison Chua</p>
     </div>
     <div id="EnterMainMenu" class="splash-content">Click anywhere</div>
 </body>
