Update game to include click sound Update SwAl placeholder buttons Implement Boss Attack animation in lottie json format
Resolves: None

--- a/game.html
+++ b/game.html
@@ -22,8 +22,9 @@
 
     <body>
         <div class="bossContainer">
-            <img src="Assets/images/pngs/BossFrame.png" alt="" class="bossFrame">
             <!-- Lottie Player -->
+            <lottie-player src="Assets/Animations/Boss1AttackLottie.json"  class="bossAnim" speed="1" style="height: 673px;" loop></lottie-player>
+            <img src="Assets/images/pngs/BossFrame.png" alt="" class="bossFrame">
         </div>
         <!-- <div class="info">
             <p id="time">Time: 000s</p>
