--- a/game.html
+++ b/game.html
@@ -23,7 +23,10 @@
     <body>
         <div class="bossContainer">
             <!-- Lottie Player -->
-            <lottie-player src="Assets/Animations/Boss1AttackLottie.json"  class="bossAnim" speed="1" style="height: 673px;" loop></lottie-player>
+            <lottie-player src="Assets/Animations/Boss1IdleLottie.json" class="bossAnim idle" speed="1" style="height: 673px;" loop autoplay></lottie-player>
+            <lottie-player src="Assets/Animations/Boss1AttackLottie.json" class="bossAnim attack" speed="1" style="height: 673px;" loop autoplay></lottie-player>
+            <lottie-player src="Assets/Animations/Boss1DamageLottie.json" class="bossAnim damage" speed="1" style="height: 673px;" loop autoplay></lottie-player>
+            <lottie-player src="Assets/Animations/Boss1DeathLottie.json" class="bossAnim death" speed="1" style="height: 673px;" loop autoplay></lottie-player>
             <img src="Assets/images/pngs/BossFrame.png" alt="" class="bossFrame">
         </div>
         <!-- <div class="info">
