Add game background Swap animation type to WebM
Resolves: None

--- a/game.html
+++ b/game.html
@@ -22,19 +22,8 @@
 
     <body>
         <div class="bossContainer">
-            <!-- Lottie Player -->
-            <lottie-player src="Assets/Animations/LottieJson/Boss1IdleLottie.json" class="bossAnim idle" speed="1" loop autoplay></lottie-player>
-            <lottie-player src="Assets/Animations/LottieJson/Boss1AttackLottie.json" class="bossAnim attack" speed="1" loop autoplay></lottie-player>
-            <lottie-player src="Assets/Animations/LottieJson/Boss1DamageLottie.json" class="bossAnim damage" speed="1" loop autoplay></lottie-player>
-            <lottie-player src="Assets/Animations/LottieJson/Boss1DeathLottie.json" class="bossAnim death" speed="1" loop autoplay></lottie-player>
-            <img src="Assets/images/pngs/BossFrame.png" alt="" class="bossFrame">
+            <video src="Assets/Animations/Boss1Idle.webm" class="bossAnim" autoplay loop>
         </div>
-        <!-- <div class="info">
-            <p id="time">Time: 000s</p>
-            <p id="pHealth">Player_Health: </p> 
-            <p id="pWPM">Player_WPM: </p> 
-            <p id="eHealth">Enemy_Health: </p>
-        </div> -->
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
                 <ul>
