Refactor: - Remove depracated code - Implement guard clause to main.js - Re-implement mutliple concurrent animations Implement constant damage
Resolves: leaderboard still trigger even when current time is greater than existing time

--- a/game.html
+++ b/game.html
@@ -22,7 +22,10 @@
 
     <body>
         <div class="bossContainer">
-            <video src="Assets/Animations/Boss1Idle.webm" class="bossAnim" autoplay loop>
+            <video src="Assets/Animations/Boss1Idle.webm" class="bossAnim Idle" autoplay loop></video>
+            <video src="Assets/Animations/Boss1Damage.webm" class="bossAnim Damage" autoplay loop></video>
+            <video src="Assets/Animations/Boss1Attack.webm" class="bossAnim Attack" autoplay loop></video>
+            <video src="Assets/Animations/Boss1Death.webm" class="bossAnim Death" autoplay loop></video>
         </div>
         <div class="typingContainer">
             <div class="wordContainer" id="wordContainer">
