Add Display of boss title to differentiate bosses with same sprite
Resolves: Difficulty timing not working

--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
 
     <body>
         <div class="bossContainer">
+            <div class="bossTitle">Spider Boss</div>
             <video src="Assets/Animations/Boss1Idle.webm" class="bossAnim Idle" autoplay loop></video>
             <video src="Assets/Animations/Boss1Damage.webm" class="bossAnim Damage" autoplay loop></video>
             <video src="Assets/Animations/Boss1Attack.webm" class="bossAnim Attack" autoplay loop></video>
